--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ body{
 #run {
     padding-right: 70px;
     padding-left: 70px;
-    color: #002768;
+    color: #f8cc02;
     -webkit-text-stroke: rgba(0, 0, 0, 1);
     -webkit-text-stroke-width: 8px;
     font-weight: bold;
